saving remote address in database

--- a/recaptcha-server.cabal
+++ b/recaptcha-server.cabal
@@ -22,3 +22,4 @@ executable          recaptcha-server
                       , fast-logger
                       , hslogger
                       , bytestring
+                      , wai
