--- a/recaptcha-server.cabal
+++ b/recaptcha-server.cabal
@@ -23,3 +23,4 @@ executable          recaptcha-server
                       , hslogger
                       , bytestring
                       , wai
+                      , warp
