--- a/recaptcha-server.cabal
+++ b/recaptcha-server.cabal
@@ -3,7 +3,7 @@ version:       0.0.0
 cabal-version: >= 1.10
 build-type:    Simple
 
-executable          recaptcha-server
+executable recaptcha-server
     hs-source-dirs:     src
     main-is:            Main.hs
     other-modules:      DB
@@ -24,3 +24,26 @@ executable          recaptcha-server
                       , bytestring
                       , wai
                       , warp
+
+executable recaptcha-extract
+    hs-source-dirs:     src
+    main-is:            Extract.hs
+    other-modules:      DB
+    ghc-options:        -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
+    default-language:   Haskell2010
+    build-depends:      base
+                      , scotty
+                      , http-types
+                      , persistent
+                      , persistent-template
+                      , persistent-sqlite
+                      , time
+                      , text
+                      , monad-logger
+                      , fast-logger
+                      , hslogger
+                      , bytestring
+                      , wai
+                      , warp
+                      , directory
+                      , base64-bytestring
